GNOME Bugzilla – Bug 785593
page: fix logic to propagate small-screen property from driver
Last modified: 2017-11-10 19:41:17 UTC
See attached patch.
Created attachment 356600 [details] [review] page: fix logic to propagate small-screen property from driver Since the driver is only set later to the page, and the initial value is FALSE, the actual value was never propagated down when the driver was set. https://phabricator.endlessm.com/T17889
Any comments on this patch?
Review of attachment 356600 [details] [review]: ::: gnome-initial-setup/gis-page.c @@ +119,3 @@ + g_signal_connect_swapped (page->driver, "notify::small-screen", + G_CALLBACK (small_screen_changed), page); + small_screen_changed (page); this should cause no harm at least, but I fail to see where this may cause any issues since by the time a page instance is constructed the driver property will be set and the "real" small-screen value should be available.
Review of attachment 356600 [details] [review]: ::: gnome-initial-setup/gis-page.c @@ +119,3 @@ + g_signal_connect_swapped (page->driver, "notify::small-screen", + G_CALLBACK (small_screen_changed), page); + small_screen_changed (page); It will be set later, but things that depend on the small screen property (such as icons that get that value updated through a GBinding) won't get the property updated, hardcoding it to FALSE.
Review of attachment 356600 [details] [review]: ::: gnome-initial-setup/gis-page.c @@ +119,3 @@ + g_signal_connect_swapped (page->driver, "notify::small-screen", + G_CALLBACK (small_screen_changed), page); + small_screen_changed (page); oh I see, because they connect through a GBinding that's created at _init() time via gtk_widget_init_template() and properties are only available afterwards. ok, can you add this bit to the commit message? thanks
Attachment 356600 [details] pushed as b3223e6 - page: fix logic to propagate small-screen property from driver Thanks, pushed to master.