page: fix logic to propagate small-screen property from driver

Since the driver is only set later to the page, and the initial value is
FALSE, the actual value was never propagated down when the driver was
set.
This is relevant when the property is connected through a GBinding
coming from the UI file, since the property binding is evaluated at
init() time when property values are not yet available.

https://bugzilla.gnome.org/show_bug.cgi?id=785593